# tafrah

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: README.md  api-overview.md  build-and-install.md  c-abi.md  ecosystem.md  embedded.md  performance.md  platform-support.md  rust-usage.md  security.md  uniffi.md
docs/language-guides/: README.md  cpp.md  go.md  java.md  js.md  kotlin.md  python.md  rust.md
examples/: README.md
examples/auth-demo/: .gitignore  README.md  build_native.sh  proof_demo.py  run_language_examples.sh  tafrah_ctypes.py
examples/auth-demo/cpp/: main.cpp
examples/auth-demo/go/: go.mod
examples/auth-demo/go/cmd/demo/: main.go
examples/auth-demo/go/tafrah/: tafrah.go
examples/auth-demo/java/native/: tafrah_jni.cpp
examples/auth-demo/java/src/io/tafrah/demo/: Main.java  Tafrah.java  TafrahJni.java
examples/auth-demo/js/: example.mjs  tafrah.mjs  tafrah_node.cc
examples/auth-demo/kotlin/: Main.kt
examples/auth-demo/native/: demo_core.cpp  demo_core.hpp
examples/auth-demo/python/: example.py
examples/auth-demo/python/tafrah/: __init__.py
examples/auth-demo/rust/: Cargo.toml
examples/auth-demo/rust/src/: main.rs
scripts/: generate-uniffi-bindings.sh  install-abi.sh  install-ffi.sh  render-release-notes.sh  run-language-examples.sh  setup-rust.sh
src/: compress.rs  matrix.rs  ntt.rs  sampling.rs
tafrah/: Cargo.toml
tafrah-abi/: Cargo.toml  install.sh
tafrah-abi/include/: tafrah_abi.h  tafrah_ffi.h
tafrah-abi/include/tafrah/: tafrah.h  tafrah.hpp
tafrah-abi/pkgconfig/: tafrah.pc.in
tafrah-abi/src/: lib.rs
tafrah-abi/tests/: smoke.rs
tafrah-bench/: Cargo.toml
tafrah-bench/src/: main.rs
tafrah-falcon/: Cargo.toml
tafrah-falcon/src/: codec.rs  common.rs  derive.rs  expanded.rs  falcon_1024.rs  falcon_512.rs  fft.rs  fpr.rs  fpr_tables.rs  key_material.rs  keygen.rs  lib.rs  modp.rs  mq.rs  ntru.rs  params.rs  prng.rs  reduction.rs  sign.rs  types.rs  verify.rs  zint.rs
tafrah-falcon/tests/: reference_contract.rs
tafrah-falcon/tests/support/: nist_kat_rng.rs
tafrah-hqc/: Cargo.toml
tafrah-hqc/src/: arithmetic.rs  code.rs  decaps.rs  encaps.rs  fft.rs  gf.rs  hash.rs  hqc_128.rs  hqc_192.rs  hqc_256.rs  keygen.rs  lib.rs  params.rs  parse.rs  pke.rs  reed_muller.rs  reed_solomon.rs  sampling.rs  types.rs
tafrah-hqc/tests/: kem_trait.rs  reference_contract.rs
tafrah-math/: Cargo.toml
tafrah-math/src/: compress.rs  field.rs  lib.rs  ntt.rs  ntt_avx2.rs  ntt_neon.rs  poly.rs  sampling.rs
tafrah-math/tests/: ntt_encode_decode_test.rs  ntt_mul_test.rs
tafrah-ml-dsa/: Cargo.toml
tafrah-ml-dsa/src/: context.rs  encode.rs  hint.rs  keygen.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ntt_dsa.rs  params.rs  prehash.rs  sign.rs  types.rs  verify.rs
tafrah-ml-dsa/tests/: api_surface.rs  dsa_debug.rs  malformed_verify.rs
tafrah-ml-kem/: Cargo.toml
tafrah-ml-kem/src/: decaps.rs  encaps.rs  encode.rs  keygen.rs  lib.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_768.rs  params.rs  types.rs
tafrah-ml-kem/tests/: kem_trait.rs  kpke_debug.rs  malformed_inputs.rs
tafrah-slh-dsa/: Cargo.toml
tafrah-slh-dsa/src/: address.rs  fors.rs  hash_functions.rs  hypertree.rs  keygen.rs  lib.rs  params.rs  prehash.rs  sign.rs  types.rs  verify.rs  wots.rs  xmss.rs
tafrah-slh-dsa/tests/: api_surface.rs  malformed_verify.rs
tafrah-traits/: Cargo.toml
tafrah-traits/src/: dsa.rs  kem.rs  lib.rs  serdes.rs
tafrah-uniffi/: Cargo.toml  README.md
tafrah-uniffi/src/: lib.rs
tafrah/src/: lib.rs
tafrah/tests/: fips205_reference.rs  ml_dsa_kat.rs  ml_kem_kat.rs  mldsa_native_reference.rs  reference_kat.rs  slh_dsa_kat.rs
tafrah/tests/support/: dilithium_master_detkat.c  fips205_sphincs_detkat.c  mldsa_native_detkat.c  mlkem_native_detkat.c  mlkem_native_scalar_fips202_glue.h  mlkem_native_scalar_fips202x4_glue.h  mlkem_native_test_config.h  sphincs_master_detkat.c
uniffi-bindgen/: Cargo.toml
