[workspace]
resolver = "2"
members = [
    "tafrah",
    "tafrah-abi",
    "tafrah-uniffi",
    "tafrah-traits",
    "tafrah-math",
    "tafrah-ml-kem",
    "tafrah-ml-dsa",
    "tafrah-slh-dsa",
    "tafrah-falcon",
    "tafrah-hqc",
    "uniffi-bindgen",
]

[workspace.package]
authors = ["oghie <oghie@perkamindo.org>"]
license = "MIT"
repository = "https://github.com/perkamindo/tafrah"
homepage = "https://github.com/perkamindo/tafrah"
readme = "README.md"

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
subtle = { version = "2", default-features = false }
hmac = { version = "0.12", default-features = false }
libm = { version = "0.2", default-features = false }

tafrah-traits = { version = "0.1.0", path = "tafrah-traits" }
tafrah-math = { version = "0.1.0", path = "tafrah-math" }
tafrah-ml-kem = { version = "0.1.0", path = "tafrah-ml-kem" }
tafrah-ml-dsa = { version = "0.1.0", path = "tafrah-ml-dsa" }
tafrah-slh-dsa = { version = "0.1.1", path = "tafrah-slh-dsa" }
tafrah-falcon = { version = "0.1.0", path = "tafrah-falcon" }
tafrah-hqc = { version = "0.1.0", path = "tafrah-hqc" }
