[package]
name = "tafrah-abi"
version = "0.1.7"
edition = "2021"
description = "C ABI layer for Tafrah PQC primitives"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { workspace = true }
tafrah-falcon = { workspace = true }
tafrah-hqc = { workspace = true }
tafrah-ml-kem = { workspace = true }
tafrah-ml-dsa = { workspace = true }
tafrah-slh-dsa = { workspace = true }
tafrah-traits = { workspace = true, features = ["std"] }
