[package]
name = "tafrah-hqc"
version = "0.1.7"
edition = "2021"
description = "HQC (FIPS 207) scaffolding for the Tafrah PQC library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["alloc", "tafrah-traits/std"]
alloc = ["tafrah-traits/alloc"]

[dependencies]
tafrah-traits = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
