[package]
name = "tafrah-math"
version = "0.1.6"
edition = "2021"
description = "Math primitives for the Tafrah PQC library (NTT, polynomial ring, modular arithmetic)"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
tafrah-traits = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }
