[package]
name = "tafrah-slh-dsa"
version = "0.1.1"
edition = "2021"
description = "SLH-DSA (FIPS 205) implementation for the Tafrah PQC library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["alloc", "tafrah-traits/std"]
alloc = ["tafrah-traits/alloc"]

[dependencies]
tafrah-traits = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
