[package]
name = "tafrah-traits"
version = "0.1.7"
edition = "2021"
description = "Shared traits and error types for the Tafrah PQC library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
rand_core = { workspace = true }
zeroize = { workspace = true }
