[package]
name = "tafrah-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI host bindings for Tafrah PQC primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
tafrah-falcon = { workspace = true, features = ["std"] }
tafrah-hqc = { workspace = true, features = ["std"] }
tafrah-ml-dsa = { workspace = true, features = ["std"] }
tafrah-ml-kem = { workspace = true, features = ["std"] }
tafrah-slh-dsa = { workspace = true, features = ["std"] }
tafrah-traits = { workspace = true, features = ["std"] }
uniffi = "0.30"
