[package]
name = "tafrah-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI host bindings for Tafrah PQC primitives"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { workspace = true }
tafrah-falcon = { workspace = true, features = ["std"] }
tafrah-hqc = { workspace = true, features = ["std"] }
tafrah-ml-dsa = { workspace = true, features = ["std"] }
tafrah-ml-kem = { workspace = true, features = ["std"] }
tafrah-slh-dsa = { workspace = true, features = ["std"] }
tafrah-traits = { workspace = true, features = ["std"] }
uniffi = "0.31"
