[package]
name = "tafrah"
version = "0.1.7"
edition = "2021"
description = "Native Rust Post-Quantum Cryptography library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "ml-kem", "ml-dsa", "slh-dsa"]
std = ["alloc", "tafrah-traits/std"]
alloc = ["tafrah-traits/alloc"]
ml-kem = ["dep:tafrah-ml-kem"]
ml-dsa = ["dep:tafrah-ml-dsa"]
slh-dsa = ["dep:tafrah-slh-dsa"]
falcon = ["dep:tafrah-falcon"]
hqc = ["dep:tafrah-hqc"]

[dependencies]
tafrah-traits = { workspace = true }
tafrah-ml-kem = { workspace = true, optional = true }
tafrah-ml-dsa = { workspace = true, optional = true }
tafrah-slh-dsa = { workspace = true, optional = true }
tafrah-falcon = { workspace = true, optional = true }
tafrah-hqc = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
rand_core = { workspace = true }
sha3 = { workspace = true }
